# stock-ai_public

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/stock_ai/: __init__.py  app.py  cli.py  config.py  holdings.py  journal_market.py  market.py  news.py  portfolio_db.py  report.py  review.py  summarizer.py
tests/: test_portfolio_journal.py
